src/test/deca/syntax/valid/synt/method_call_this.deca
/*
    Description : appel de méthode sans préfixer la classe sur un objet défini

    Résultat : OK
*/
class B
{
    int e(){
        return 5;
    }
    int x = e();
}
