src/test/deca/syntax/invalid/synt/class_field_public_visibility.deca
/*
    Description: Test sur la déclaration d'un attribut de classe avec la visibilité public

    Résultat : erreur syntaxique (deca:7:15:)
*/
class C{
    public int x;
}
// @expected_output deca:7:15: no viable alternative at input 'publicintx'
